<resources>
    <string name="app_name" translatable="false">Registro de Super Heroes</string>
    <string name="super_hero_name">Super Hero Name</string>
    <string name="alter_ego">Alter ego</string>
    <string name="biography">Biography</string>
    <string name="power">Power</string>
    <string name="save">Save</string>
    <string name="short_biography">Short biography</string>
</resources>